# rubikmaster

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
cubeviewer/: index-103a4263242c8006.js  index-103a4263242c8006_bg.wasm  index-1b7a6887fc7431f0.js  index-1b7a6887fc7431f0_bg.wasm  index-241f26344b3e616a.js  index-241f26344b3e616a_bg.wasm  index-44d20a4017e98fa0.js  index-44d20a4017e98fa0_bg.wasm  index-62a0dca27c119dc6.js  index-62a0dca27c119dc6_bg.wasm  index-83ab601b2976e967.js  index-83ab601b2976e967_bg.wasm  index-aa8da500f1d2c78e.js  index-aa8da500f1d2c78e_bg.wasm  index-b1b12330e4a6809b.js  index-b1b12330e4a6809b_bg.wasm  index-d2ff73f353829740.js  index-d2ff73f353829740_bg.wasm  index-e37f7d7eaab31cdf.js  index-e37f7d7eaab31cdf_bg.wasm  index-e528bcda935ae13c.js  index-e528bcda935ae13c_bg.wasm  index-e657b2a314d8550b.js  index-e657b2a314d8550b_bg.wasm  index.html
f2l/: index-21208ec5709b044a.js  index-21208ec5709b044a_bg.wasm  index-60f0a02857d54c13.js  index-60f0a02857d54c13_bg.wasm  index-613131874a0b9092.js  index-613131874a0b9092_bg.wasm  index-647fa68a299c245.js  index-647fa68a299c245_bg.wasm  index-6ae64eb010bbcf69.js  index-6ae64eb010bbcf69_bg.wasm  index-76561042de1e34bd.js  index-76561042de1e34bd_bg.wasm  index-76731b6762fad01.js  index-76731b6762fad01_bg.wasm  index-906d3101669c8447.js  index-906d3101669c8447_bg.wasm  index-910bb94c10221b38.js  index-910bb94c10221b38_bg.wasm  index-ad7e36bf4ac2e811.js  index-ad7e36bf4ac2e811_bg.wasm  index-b69c5b78bb7a763d.js  index-b69c5b78bb7a763d_bg.wasm  index-c01ccf2191a97c1f.js  index-c01ccf2191a97c1f_bg.wasm  index-c7a5418faf69e967.js  index-c7a5418faf69e967_bg.wasm  (+5 more)
(+22 files in other folders)
