[package]
name = "rubikmaster"
version = "0.3.0"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tools to implement Rubik's cube applications."
repository = "https://github.com/akiradeveloper/rubikmaster"
readme = "README.md"
categories = ["mathematics"]
keywords = ["rubik", "puzzle"]

[dependencies]
once_cell = "1.8"
rand = "0.8"
nom = "7"

[dev-dependencies]
proptest = "1.0"
nalgebra = "0.29"