[package]
name = "rubikmaster"
version = "0.4.2"
authors = ["Akira Hayakawa <ruby.wktk@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tools to implement Rubik's cube applications."
repository = "https://github.com/akiradeveloper/rubikmaster"
readme = "README.md"
categories = ["mathematics"]
keywords = ["rubik", "puzzle"]

[dependencies]
once_cell = "1.8"
nom = "7"
rand = "0.8"

# component
nalgebra-glm = { version = "0.15", optional = true }
yew = { version = "0.18", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
component = ["nalgebra-glm", "yew", "js-sys", "wasm-bindgen"]

[dev-dependencies]
proptest = "1.0"
nalgebra = "0.29"

[workspace]
members = [
    "demo/cubeviewer",
    "demo/f2l",
]

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]